add and tweak tests for find